--- a/style.css
+++ b/style.css
@@ -26,12 +26,12 @@
  }
 
  .img {
-     width: 95%;
+     display: flex;
+     width: 100%;
      height: 450px;
      background-color:#BBD2EF;
      margin-top: 20px;
      margin-bottom: 20px;
-     margin-left: 38px;
     }
 
 
@@ -41,7 +41,7 @@
 
 .float-child {
     width: 50%;
-    float: right;
+    float: left;
     padding: 20px;
 }  
 
@@ -56,6 +56,11 @@
    font-size: 2.4rem;
    font-weight: 700;
  }
+
+ .gifwidth{
+    width: 100%;
+ }
+
 
  @media only screen and (min-width: 768px) {
    .cd-title {
