--- a/style.css
+++ b/style.css
@@ -61,6 +61,58 @@
     width: 100%;
  }
 
+ .topnav {
+  overflow: hidden;
+  background-color: #BBD2EF;
+  text-align: center;
+}
+
+
+.topnav a {
+  display: inline-block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+  margin-left: 50px;
+}
+
+.topnav a:hover {
+  border-bottom: 1px solid black;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #292b2a;
+  color: rgb(255, 254, 254);
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
 
  @media only screen and (min-width: 768px) {
    .cd-title {
@@ -755,6 +807,7 @@ xslide
    -moz-animation: slide-out 0.6s;
    animation: slide-out 0.6s;
  }
+
 
  @-webkit-keyframes slide-in {
    0% {
@@ -1461,3 +1514,90 @@ xpush
      transform: translateX(100%);
    }
  }
+
+ section.about {
+  padding:0px;
+  border-right:20px solid white;
+  border-left:20px solid white;
+}
+section.about h1 {
+  color:#3a3a3a;
+  font-family:'ProximaNovaT';
+  font-size:65px;
+  margin-top:50px;
+}
+section.about a.pronounce span {
+  color:#ABABAB;
+  cursor:help;
+  border-bottom:1px dotted rgb(216,216,216);
+  letter-spacing:1px;
+}
+section.about a.pronounce {
+  border-bottom:none;
+}
+section.about a.pronounce:hover {
+  border-bottom:none;
+}
+section.about p {
+  color:#838383;
+  margin:0 auto;
+  margin-bottom:30px;
+  font-size:21px;
+}
+section.about p a {
+  color:#838383;
+  border-bottom:1px solid #E7E7E7;
+  padding-bottom:1px;
+}
+section.about p a:hover {
+  border-bottom:1px solid #009ca8;
+}
+section.about img {
+  display:block;
+  margin:auto;
+  border-radius: 50%;
+}
+section.about h2 {
+  font-family:'ProximaNova';
+  color:#676767;
+  font-size:17px;
+  line-height:2.2em;
+}
+
+ul.tools,ul.lang,ul.hobbies {
+  margin:0;
+  font-size: 40px;
+  margin-left: 25%;
+}
+
+ul.tools li,ul.hobbies li {
+  list-style:none;
+  display:inline-block;
+  background-size:500px;
+  margin-left:17px;
+}
+
+.logo {
+  margin-top:75px !important;
+  margin-bottom:20px !important;
+  width:50%;
+  height: 50%;
+}
+
+.footer{
+  margin-top: 600px;
+  background-color: blue;
+}
+.float-child3{
+  width: 30%;
+  float: left;
+  padding: 20px; 
+  margin-left: 50px;
+  text-align: center;
+}
+.footer1
+{
+  font-family: "Source Sans Pro", sans-serif;;
+  color: #848484;
+  font-size: 25px;
+}
