Color changes for skill

--- a/style.css
+++ b/style.css
@@ -703,7 +703,7 @@ ul.tools li,ul.hobbies li {
 .numbers-wrapper h4 {
   font-family:'Handlee';
   font-size:4rem;
-  color:#BBD2EF;
+  color:#CC4949;
 }
 .numbers-wrapper span {
   font-size:1.2rem;
