--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
  html {
   scroll-behavior: smooth;
    font-size: 62.5%;
+   width: 120%;
  }
 
  body {
@@ -180,6 +181,18 @@
      font-size: 6rem;
    }
  }
+ 
+ @media only screen and (min-width: 1860px) {
+   hr{
+     display: none;
+   }
+  .numbers-inner-wrapper
+  {
+    margin: 0px !important;
+    position: relative;
+    left: 30%;
+  }
+}
 
  .cd-words-wrapper {
    display: inline-block;
